[package]
name = "stivale"
description = "A crate for parsing qloader2 and tomatboot's stivale2 structures"
version = "0.2.1"
authors = ["Martin Löffler <me@fatalerrorcoded.eu>"]
license = "MIT/Apache-2.0"
edition = "2018"

readme = "README.md"
repository = "https://github.com/fatalerrorcoded/stivale-rs"
categories = ["no-std"]

[dependencies]
bitflags = "1.2.1"
