[package]
name = "stivale"
description = "[DEPRECATED] A crate for parsing qloader2 and tomatboot's stivale2 structures"
version = "0.2.2"
authors = ["Martin Löffler <me@fatalerrorcoded.eu>"]
license = "MIT/Apache-2.0"
edition = "2018"

readme = "README.md"
repository = "https://github.com/fatalerrorcoded/stivale-rs"
categories = ["no-std"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
bitflags = "1.2.1"
